--- a/tasks/terraform-apply.yml
+++ b/tasks/terraform-apply.yml
@@ -3,7 +3,7 @@
 - name: Ensure Terraform project is in the requested state
   terraform:
     project_path: "{{ proj.project_path }}"
-    state: "{{ proj.state | default('present') }}"
+    state: "{{ (proj.state | default('present')) if not terraform_destroy_all else 'absent' }}"
     plan_file: "{{ proj.plan_file | default('project.tfplan') }}"
     state_file: "{{ proj.state_file | default(omit) }}"
     workspace: "{{ proj.workspace | default(omit) }}"
