--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -1,45 +1,9 @@
 ---
 
-# dependency:
-#   name: galaxy
-# driver:
-#   name: docker
-# lint:
-#   name: yamllint
-# platforms:
-#   - name: terraform_project
-#     image: "geerlingguy/docker-${MOLECULE_DISTRO:-centos8}-ansible:latest"
-#     command: ${MOLECULE_DOCKER_COMMAND:-""}
-#     pre_build_image: true
-# scenario:
-#   check_sequence:
-#     - lint
-#     - cleanup
-#     - dependency
-#     - syntax
-#     - create
-#     - prepare
-#     - check
-#   test_sequence:
-#     - converge
-#     - destroy
-# provisioner:
-#   name: ansible
-#   options:
-#     verbose: true
-#   lint:
-#     name: ansible-lint
-#   playbooks:
-#     prepare: ${MOLECULE_PREPARE_PLAYBOOK:-prepare.yml}
-#     check: ${MOLECULE_PLAYBOOK:-playbook.yml}
-#     converge: ${MOLECULE_PLAYBOOK:-playbook.yml}
-# verifier:
-#   name: testinfra
-#   lint:
-#     name: flake8
-
 dependency:
   name: galaxy
+  options:
+    role-file: molecule/requirements.yml
 driver:
   name: docker
 lint: |
@@ -53,14 +17,15 @@ platforms:
     pre_build_image: ${MOLECULE_PREBUILT:-true}
 scenario:
   check_sequence:
+    - dependency
     - lint
     - cleanup
-    - dependency
     - syntax
     - create
     - prepare
     - check
   test_sequence:
+    - dependency
     - converge
     - destroy
 provisioner:
