--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -35,5 +35,7 @@
         group: user
         mode: 0755
 
-  roles:
-    - xanmanning.terraform
+  tasks:
+    - name: Include Terraform role
+      include_role:
+        name: xanmanning.terraform
