--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -27,8 +27,8 @@ terraform_exec_projects: []
 #       region: "eu-west-1"
 #       bucket: "some-bucket"
 #       key: "random.tfstate"
-#     backend_config_files:
-#       - path/to/file             # Optional, path to backend config file
+#     backend_config_files:        # Optional, list of files containing backend config
+#       - config.hcl
 #     targets:                     # Optional, list of specific resources to plan/apply to.
 #       some_target
 #     variables_file: dev.tfvars   # Optional, path to variables file.
