--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -4,9 +4,12 @@
   hosts: all
   become: true
   become_user: terraformuser
-  vars:
-    terraform_exec_projects:
-      - project_path: /home/terraformuser/projects/null
-        plan_file: null.tfplan
-  roles:
-    - role: xanmanning.terraform_project
+  tasks:
+    - name: "Include Terraform role"
+      include_role:
+        name: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') | basename }}"
+      vars:
+        terraform_min_version: "0.14.0"
+        terraform_exec_projects:
+          - project_path: /home/terraformuser/projects/null
+            plan_file: null.tfplan
